# vidspeed

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml
src/: cli.rs  config.rs  main.rs  processor.rs  web.rs
