[package]
name = "vidspeed"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "vidspeed"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }
indicatif = "0.17"
colored = "2"

# Web
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip", "compression-br"] }
maud = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Processing (no ffmpeg-next, we use system ffmpeg)
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
config = "0.14"

# Queue & Rate limiting (optional, remove if not needed)
# bb8 = "0.8"
# bb8-redis = "0.14"
# redis = { version = "0.24", features = ["tokio-comp"] }
governor = "0.6"
tokio-cron-scheduler = "0.9"

# Monitoring & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
prometheus = "0.13"
lazy_static = "1.4"

# Security
argon2 = "0.5"
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }

# Utils
anyhow = "1"
thiserror = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
