[package]
name = "vidspeed"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "vidspeed"
path = "src/main.rs"

[dependencies]
# CLI
clap        = { version = "4.4", features = ["derive", "color"] }
indicatif   = "0.17"
colored     = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utils
anyhow              = "1"
chrono              = { version = "0.4", features = ["serde"] }
walkdir             = "2"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
dotenv              = "0.15"
